@@ -4,7 +4,7 @@ from resources.lib.ui import control, client
 
 def div_flavor(f):
     def wrapper(*args, **kwargs):
-        if control.getSetting("general.divflavors") == "true":
+        if control.getSetting("General.divflavors") == "true":
             mal_dub = _get_mal_dub()
 
             return f(dub=mal_dub, *args, **kwargs)
@@ -20,8 +20,11 @@ def _get_mal_dub():
         mal_dub = json.load(mal_dub)
     except:
         file_to_dump = open(control.maldubFile, 'a+')
-        mal_dub = client.request('https://armkai.vercel.app/api/maldub')
-        mal_dub = json.loads(mal_dub)
+        mal_dub_raw = client.request('https://raw.githubusercontent.com/MAL-Dubs/MAL-Dubs/main/data/dubInfo.json')
+        mal_dub_list = json.loads(mal_dub_raw)["dubbed"]
+        mal_dub = {}
+        for item in mal_dub_list:
+            mal_dub[str(item)] = {"dub": True}
         json.dump(mal_dub, file_to_dump, indent=4)
 
     return mal_dub
